# pilgrims-of-faith

./: .gitignore  pyproject.toml
pilgrims_of_faith/: answers.json  bible_reading_plan.json  main.py  quiz_data.pickle  stats_data.json
