[tool.poetry]
name = "pilgrims_of_faith"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytz = "^2024.1"
schedule = "^1.2.2"
python-decouple = "^3.8"
pytelegrambotapi = "^4.22.1"
mutagen = "^1.47.0"
pydub = "^0.25.1"
ffmpeg = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
